k8s/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: production
  namespace: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: production
  template:
    metadata:
      labels:
        app: production
    spec:
      automountServiceAccountToken: false
      imagePullSecrets:
        - name: regcred
      containers:
        - name: production
          image: registry.aarnihalinen.fi/homepage:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      securityContext: {}
