k8s/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  name: production-svc
  namespace: homepage
  labels:
    app: production
spec:
  type: ClusterIP
  selector:
    app: production
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
