k8s/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: homepage-production
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    nginx.org/client-max-body-size: "10m"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - aarnihalinen.fi
        - www.aarnihalinen.fi
      secretName: production-cert
  rules:
    - host: aarnihalinen.fi
      http: &backend
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: staging-svc
                port:
                  number: 80
    - host: www.aarnihalinen.fi
      http: *backend
